--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="description" content="Erewhile Digital builds conversion-focused websites and landing pages, with optional content production, analytics, CRM automation and AI integrations. Turn your website into a revenue-generating digital ecosystem." />
 
   <!-- Canonical (adjust if needed) -->
-  <link rel="canonical" href="https://erewhile.digital/en/" />
+  <link rel="canonical" href="https://erewhile.digital/" />
 
   <!-- Hreflang (RU/LV pages can be created later) -->
   <link rel="alternate" hreflang="en" href="https://erewhile.digital/en/" />
   <link rel="alternate" hreflang="ru" href="https://erewhile.digital/ru/" />
   <link rel="alternate" hreflang="lv" href="https://erewhile.digital/lv/" />
-  <link rel="alternate" hreflang="x-default" href="https://erewhile.digital/en/" />
+  <link rel="alternate" hreflang="x-default" href="https://erewhile.digital/" />
 
   <!-- ✅ Favicons / App Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636900/apple-touch-icon_xewslz.png">
@@ -1834,6 +1834,7 @@
 
 </body>
 </html>
+
 
 
 
