--- a/index.html
+++ b/index.html
@@ -1139,6 +1139,9 @@
 
 .langSwitch { display: none !important; }
 
+.reveal{ opacity:1 !important; transform:none !important; }
+
+    
   </style>
 
   <div class="wrap gridBg">
@@ -1623,3 +1626,4 @@
 
   <div class="formGrid">
     <div>
+
