--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,8 @@
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
-          <a class="btn btnAccent" href="fast-website.html" target="_blank" rel="noopener">Fast website €150</a>
+          <a class="btn btnAccent" href="fast-website.html">Fast website €150</a>
+
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
       </div>
@@ -1593,9 +1594,10 @@
           </div>
 
           <div style="margin-top:16px;">
-            <a class="btn btnAccent" href="fast-website.html" target="_blank" rel="noopener">
-              Open package page
-            </a>
+          <a class="btn btnAccent" href="fast-website.html">
+  Open package page
+</a>
+
           </div>
         </div>
       </div>
@@ -1830,3 +1832,4 @@
 
 </body>
 </html>
+
