--- a/fast-website.html
+++ b/fast-website.html
@@ -4,16 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- SEO -->
   <title>Fast One-Page Website for €150 (Domain Included up to €15) — Erewhile Digital</title>
   <meta name="description" content="Order a fast, clean one-page website for €150. Mobile-ready, lead form included, and domain purchase is included up to €15. Launch quickly with Erewhile Digital." />
 
   <link rel="canonical" href="https://erewhile.digital/fast-website.html" />
-<link rel="alternate" hreflang="en" href="https://erewhile.digital/fast-website.html" />
-<link rel="alternate" hreflang="x-default" href="https://erewhile.digital/fast-website.html" />
+  <link rel="alternate" hreflang="en" href="https://erewhile.digital/fast-website.html" />
+  <link rel="alternate" hreflang="x-default" href="https://erewhile.digital/fast-website.html" />
 
-
-  <!-- Open Graph -->
   <meta property="og:title" content="Fast One-Page Website for €150 — Erewhile Digital" />
   <meta property="og:description" content="A clean one-page website built fast: mobile-ready, lead form included, and domain purchase included up to €15." />
   <meta property="og:type" content="website" />
@@ -25,7 +22,6 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636275/og_d0d1z2.png" />
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,650;0,750;1,400;1,650&display=swap" rel="stylesheet">
@@ -49,7 +45,6 @@
       --ease:cubic-bezier(.16,1,.3,1);
     }
 
-    /* ✅ HARD FIX: stop horizontal jitter */
     html, body{ width:100%; max-width:100%; overflow-x:hidden; }
     body{
       margin:0;
@@ -81,7 +76,6 @@
       min-width:0;
     }
 
-    /* Brand */
     .brand{
       display:flex;
       align-items:center;
@@ -138,7 +132,6 @@
       white-space: nowrap;
     }
 
-    /* Buttons */
     .btn{
       height: var(--btnH);
       padding: 0 16px;
@@ -339,7 +332,6 @@
       white-space: nowrap;
     }
 
-    /* Form */
     .formWrap{
       border: 1px solid var(--line);
       border-radius: 22px;
@@ -381,6 +373,8 @@
       border-radius: 16px;
       padding: 12px 12px;
       font-size: 14px;
+      font-family: inherit;
+      line-height: 1.4;
       outline:none;
       transition: .2s var(--ease);
       background:#fff;
@@ -389,6 +383,9 @@
     input:focus, textarea:focus{
       border-color: rgba(7,107,88,.42);
       box-shadow: 0 0 0 4px rgba(7,107,88,.10);
+    }
+    input::placeholder, textarea::placeholder{
+      color: rgba(11,11,11,.45);
     }
     .formActions{
       margin-top: 12px;
@@ -403,7 +400,6 @@
       line-height: 1.5;
     }
 
-    /* Footer: desktop inline centered, mobile stacked centered */
     .footerCard{
       margin-top: 14px;
       border: 1px solid var(--line);
@@ -438,7 +434,6 @@
       user-select:none;
     }
 
-    /* Reveal */
     .reveal{ opacity:0; transform: translateY(10px); transition: .75s var(--ease); }
     .reveal.on{ opacity:1; transform:none; }
 
@@ -450,20 +445,17 @@
       .full{ grid-column: 1 / -1; }
     }
 
-    /* ✅ Mobile tuning */
     @media (max-width: 560px){
       :root{ --btnH: 40px; }
 
       .headerInner{ padding: 10px 12px; }
 
-      /* Header: mobile shows brand text, hides logo */
       .brandLogo{ display:none; }
       .brandText{ display:inline; font-weight: 750; }
 
       .btn{ padding: 0 12px; font-size: 13px; }
-      .headerCtas .btnOutline{ display:none; } /* hide "Home" on mobile */
+      .headerCtas .btnOutline{ display:none; }
 
-      /* Smaller headings on mobile */
       .h1{
         font-size: 30px;
         line-height: 1.08;
@@ -472,7 +464,6 @@
       .blockH{ font-size: 16px; }
       .formTitle{ font-size: 20px; }
 
-      /* Footer: stacked + centered */
       .footerCard{
         flex-direction: column;
         align-items:center;
@@ -484,7 +475,6 @@
     }
   </style>
 
-  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -510,7 +500,6 @@
   <div class="header">
     <div class="headerInner">
       <a class="brand" href="/" aria-label="Back to erewhile.digital">
-
         <img
           class="brandLogo"
           src="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770410043/logo_erewhile_o4gv8z.png"
@@ -654,7 +643,6 @@
         </section>
       </div>
 
-      <!-- Footer (desktop inline centered; mobile stacked centered) -->
       <div class="footerCard" aria-label="Contacts">
         <a class="footerMiniLink" href="mailto:web@erewhile.digital">web@erewhile.digital</a>
         <span class="footerMiniSep" aria-hidden="true">•</span>
