--- a/index.html
+++ b/index.html
@@ -4,26 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- SEO: Title + Description -->
   <title>Erewhile Digital — Website Design & Development, Content, Integrations (CRM & AI)</title>
   <meta name="description" content="Erewhile Digital builds conversion-focused websites and landing pages, with optional content production, analytics, CRM automation and AI integrations. Turn your website into a revenue-generating digital ecosystem." />
 
-  <!-- Canonical (adjust if needed) -->
   <link rel="canonical" href="https://erewhile.digital/en/" />
 
-  <!-- Hreflang (RU/LV pages can be created later) -->
   <link rel="alternate" hreflang="en" href="https://erewhile.digital/en/" />
   <link rel="alternate" hreflang="ru" href="https://erewhile.digital/ru/" />
   <link rel="alternate" hreflang="lv" href="https://erewhile.digital/lv/" />
   <link rel="alternate" hreflang="x-default" href="https://erewhile.digital/en/" />
 
-  <!-- ✅ Favicons / App Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636900/apple-touch-icon_xewslz.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636904/favicon-32x32_zujayz.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636901/favicon-16x16_zqhiri.png">
   <link rel="icon" href="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636907/favicon_u65czo.ico">
 
-  <!-- Open Graph -->
   <meta property="og:title" content="Erewhile Digital — Website Design & Development, Content, Integrations (CRM & AI)" />
   <meta property="og:description" content="Conversion-focused websites + content, analytics, CRM automation and AI integrations. A website that works as your digital ecosystem." />
   <meta property="og:type" content="website" />
@@ -32,27 +27,23 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <!-- Optional: Twitter cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636275/og_d0d1z2.png" />
 </head>
 <body>
 
 <div id="erewhile-dstudio">
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,650;0,750;1,400;1,650&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      /* Brand palette */
       --a:#076B58;
       --t1:#054B4D;
       --t2:#0B324B;
       --shadow:#042727;
 
-      /* White-page system */
       --bg:#ffffff;
       --paper:#fbfbfb;
       --ink:#0b0b0b;
@@ -61,7 +52,6 @@
       --line:rgba(11,11,11,.10);
       --line2:rgba(11,11,11,.06);
 
-      /* Buttons */
       --btnH:42px;
       --r:999px;
       --ease:cubic-bezier(.16,1,.3,1);
@@ -74,7 +64,6 @@
     #erewhile-dstudio *{ box-sizing:border-box; }
     #erewhile-dstudio a{ color:inherit; text-decoration:none; }
 
-    /* Outer frame */
     .wrap{
       background: var(--bg);
       border: 1px solid var(--line);
@@ -83,7 +72,6 @@
       overflow-x:hidden;
     }
 
-    /* Subtle grid background like the reference */
     .gridBg{
       position:relative;
       background:
@@ -101,7 +89,6 @@
       pointer-events:none;
     }
 
-    /* Header (sticky) */
     .header{
       position:sticky;
       top:0;
@@ -119,7 +106,6 @@
       gap: 16px;
     }
 
-    /* BRAND */
     .brand{
       display:flex;
       align-items:center;
@@ -167,7 +153,6 @@
       margin-left: auto;
     }
 
-    /* Buttons */
     .btn{
       height: var(--btnH);
       padding: 0 16px;
@@ -201,7 +186,6 @@
       font-size: 12.5px;
     }
 
-    /* Sections */
     .section{
       max-width: 1180px;
       margin: 0 auto;
@@ -211,7 +195,6 @@
     }
     .section:last-child{ border-bottom:none; }
 
-    /* Hero */
     .hero{
       text-align:center;
       padding-top: 84px;
@@ -239,7 +222,6 @@
       flex-wrap:wrap;
     }
 
-    /* Split */
     .split{
       display:grid;
       grid-template-columns: 1fr;
@@ -272,7 +254,6 @@
       font-size: 13px;
     }
 
-    /* Ecosystem map */
     .ecoWrap{
       border: 1px solid var(--line);
       border-radius: 22px;
@@ -412,7 +393,6 @@
       line-height: 1.65;
     }
 
-    /* Accordion */
     details.acc{
       position:relative;
       margin-top: 12px;
@@ -441,7 +421,6 @@
     details[open] summary.accSum:after{ content:"—"; }
     details.acc > *:not(summary){ padding: 0 14px 14px; }
 
-    /* ===== VIDEO RAIL (base) ===== */
     .video-rail{
       position: relative;
       width: 100%;
@@ -633,7 +612,6 @@
       #videoRailVertical  { animation-duration: 36s; }
     }
 
-    /* Case tiles */
     .caseHeader{
       display:flex;
       justify-content:space-between;
@@ -712,7 +690,6 @@
     .case:hover .caseLink{ opacity:1; transform: translateX(1px); }
     .arrow{ font-weight: 750; }
 
-    /* Mosaic */
     .mosaic{
       display:grid;
       grid-template-columns: 1fr;
@@ -765,7 +742,6 @@
       color: rgba(11,11,11,.82);
     }
 
-    /* Contact form */
     .formWrap{
       border: 1px solid var(--line);
       border-radius: 22px;
@@ -805,6 +781,8 @@
       border-radius: 16px;
       padding: 12px 12px;
       font-size: 14px;
+      font-family: inherit;
+      line-height: 1.4;
       outline:none;
       transition: .2s var(--ease);
       background:#fff;
@@ -813,6 +791,9 @@
     input:focus, select:focus, textarea:focus{
       border-color: rgba(7,107,88,.42);
       box-shadow: 0 0 0 4px rgba(7,107,88,.10);
+    }
+    input::placeholder, textarea::placeholder{
+      color: rgba(11,11,11,.45);
     }
     .formActions{
       margin-top: 12px;
@@ -827,15 +808,12 @@
       line-height: 1.5;
     }
 
-    /* Reveal */
     .reveal{ opacity:0; transform: translateY(10px); transition: .75s var(--ease); }
     .reveal.on{ opacity:1; transform:none; }
 
-    /* FIX: grid width */
     .split > * { min-width: 0; }
     .rightCol { min-width: 0; }
 
-    /* Responsive desktop */
     @media (min-width: 960px){
       .nav{ display:flex; }
       .h1{ font-size: 74px; }
@@ -861,14 +839,12 @@
       .formGrid{ grid-template-columns: 1fr 1fr; }
       .full{ grid-column: 1 / -1; }
 
-      /* desktop: accordion behaves like normal */
       details.acc{ border: 0; background: transparent; }
       details.acc > summary{ display:none; }
       details.acc > *:not(summary){ padding: 0; }
       details.acc[open] > summary{ display:none; }
     }
 
-    /* ✅ HARD FIX: black buttons always readable */
     .btnBlack,
     .btnBlack *{
       color:#fff !important;
@@ -877,9 +853,6 @@
       -webkit-text-fill-color:#fff;
     }
 
-    /* =========================
-       MOBILE SIMPLIFY PACK
-       ========================= */
     @media (max-width: 560px){
       .wrap{ border-radius: 14px; }
       .section{ padding: 44px 14px; }
@@ -916,7 +889,6 @@
 
       .brand{ min-width: unset; }
 
-      /* ✅ requested: mobile shows text erewhile.digital, hides logo */
       .brandLogo{ display:none; }
       .brandTextDesktop{ display:none; }
       .brandTextMobile{ display:inline; }
@@ -924,7 +896,6 @@
       .headerInner{ padding: 10px 12px; gap: 10px; }
       .headerCtas .btn{ padding: 0 12px; }
 
-      /* on mobile: keep only main CTA in header */
       .headerCtas a.btnAccent{ display:none; }
 
       .caseGrid{ gap: 14px; }
@@ -933,22 +904,18 @@
       .ecoWrap{ padding: 14px; border-radius: 18px; }
       .ecoCenter, .orbit{ padding: 14px; border-radius: 18px; }
 
-      /* video: calm mode for mobile */
       .railControls{ display:none; }
       .rail-track{ animation: none !important; }
       .rail-viewport{ overflow-x: auto; }
 
-      /* snap for swipe */
       .rail-viewport{ scroll-snap-type: x mandatory; }
       .vcard{ scroll-snap-align: start; }
       .vcard[data-orient="landscape"]{ width: 260px; }
       .vcard[data-orient="portrait"]{ width: 190px; }
 
-      /* mobile: show only vertical rail block */
       .railLandscape{ display:none; }
     }
 
-    /* Core list: desktop vs mobile */
     .coreListMobile{ display:none; }
     .coreListDesktop{ display:grid; }
 
@@ -957,7 +924,6 @@
       .coreListMobile{ display:block; }
     }
 
-    /* ===== OFFERS GRID ===== */
     .offersGrid{
       display:grid;
       grid-template-columns: 1fr;
@@ -971,7 +937,6 @@
       }
     }
 
-    /* ===== PRIMARY vs SECONDARY ===== */
     .primaryOffer{
       border-color: rgba(7,107,88,.35);
       background:
@@ -985,7 +950,6 @@
       background: #fff;
     }
 
-    /* ===== BADGES ===== */
     .offerBadge{
       display:inline-block;
       margin-bottom: 12px;
@@ -1017,7 +981,6 @@
       }
     }
 
-    /* LinkedIn icon button */
     .socialBtn{
       width: 42px;
       height: 42px;
@@ -1045,7 +1008,6 @@
       .socialBtn{ display:none; }
     }
 
-    /* ===== FOOTER ===== */
     .siteFooter{
       max-width: 1180px;
       margin: 0 auto;
@@ -1073,7 +1035,6 @@
       .footerCard{ border-radius: 18px; padding: 14px; }
     }
 
-    /* ✅ FOOTER: minimal contacts only */
     .footerMini{
       display:flex;
       align-items:center;
@@ -1102,7 +1063,6 @@
       position:relative;
     }
 
-    /* ✅ Language switch */
     .langSwitch{
       display:flex;
       gap:8px;
@@ -1134,15 +1094,14 @@
       color: rgba(11,11,11,.88);
     }
     @media (max-width: 560px){
-      .langSwitch{ display:none; } /* keep header clean on mobile */
+      .langSwitch{ display:none; }
     }
 
-.langSwitch { display: none !important; }
+    .langSwitch { display: none !important; }
 
   </style>
 
   <div class="wrap gridBg">
-    <!-- HEADER -->
     <div class="header">
       <div class="headerInner">
 
@@ -1172,7 +1131,6 @@
             </svg>
           </a>
 
-          <!-- Language links (placeholders until you create them) -->
           <div class="langSwitch" aria-label="Language switch">
             <a class="langLink isActive" href="/en/" hreflang="en" lang="en">EN</a>
             <a class="langLink" href="/lv/" hreflang="lv" lang="lv">LV</a>
@@ -1186,7 +1144,6 @@
       </div>
     </div>
 
-    <!-- HERO -->
     <section class="section hero">
       <h1 class="h1 reveal">
         Your website as the hub<br>of a digital ecosystem
@@ -1203,7 +1160,6 @@
       </div>
     </section>
 
-    <!-- ABOUT / POSITIONING -->
     <section class="section" id="ew-web">
       <div class="split">
         <div>
@@ -1230,7 +1186,6 @@
         </div>
       </div>
 
-      <!-- Orbits block -->
       <div id="ew-orbits" class="ecoWrap reveal" style="transition-delay:180ms; margin-top:22px;">
         <div class="ecoTitle">
           <h2>Core + <em>orbits</em></h2>
@@ -1296,7 +1251,6 @@
       </div>
     </section>
 
-    <!-- WORK (web-first) -->
     <section class="section" id="ew-work">
       <div class="caseHeader">
         <h2 class="reveal">Selected work <em>(web-first)</em></h2>
@@ -1348,7 +1302,6 @@
         </div>
       </div>
 
-      <!-- VIDEO -->
       <div class="ecoWrap reveal" style="margin-top:22px;">
         <div class="ecoTitle">
           <h2>Video <em>for websites</em></h2>
@@ -1359,7 +1312,6 @@
           On mobile, we prioritize vertical to keep the page lightweight.
         </div>
 
-        <!-- LANDSCAPE -->
         <div class="railBlock railLandscape" style="position:relative; margin-top:16px;">
           <div class="orbitK" style="position:relative;">Landscape • 16:9</div>
           <div class="orbitT" style="position:relative; margin-top:8px;">Brand presentations, explainers, interviews</div>
@@ -1461,7 +1413,6 @@
           </div>
         </div>
 
-        <!-- VERTICAL -->
         <div class="railBlock railVertical" style="position:relative; margin-top:18px;">
           <div class="orbitK" style="position:relative;">Vertical • 9:16</div>
           <div class="orbitT" style="position:relative; margin-top:8px;">Maximum impact on mobile</div>
@@ -1554,7 +1505,6 @@
       </div>
     </section>
 
-    <!-- OFFERS -->
     <section class="section">
       <div class="mosaic offersGrid">
         <div class="tile offerTile reveal primaryOffer">
@@ -1594,16 +1544,12 @@
           </div>
 
           <div style="margin-top:16px;">
-          <a class="btn btnAccent" href="fast-website.html">
-  Open package page
-</a>
-
+            <a class="btn btnAccent" href="fast-website.html">Open package page</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- CONTACT FORM -->
     <section class="section" id="ew-contact">
       <div class="formWrap reveal">
         <h3 class="formTitle">Request a quote</h3>
@@ -1612,52 +1558,50 @@
           If you prefer, book a consultation and we’ll break it down together.
         </div>
 
-        <!-- ✅ Fixed: sending to your email -->
         <form action="https://formsubmit.co/web@erewhile.digital" method="POST">
-  <input type="hidden" name="_subject" value="New request — erewhile.digital (EN)">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_template" value="table">
-  <input type="text" name="_honey" style="display:none">
+          <input type="hidden" name="_subject" value="New request — erewhile.digital (EN)">
+          <input type="hidden" name="_captcha" value="false">
+          <input type="hidden" name="_template" value="table">
+          <input type="text" name="_honey" style="display:none">
 
-  <div class="formGrid">
-    <div>
-      <label>Name</label>
-      <input name="name" required placeholder="How should we address you?">
-    </div>
+          <div class="formGrid">
+            <div>
+              <label>Name</label>
+              <input name="name" required placeholder="How should we address you?">
+            </div>
 
-    <div>
-      <label>Email</label>
-      <input name="_replyto" type="email" required placeholder="you@company.com">
-    </div>
+            <div>
+              <label>Email</label>
+              <input name="_replyto" type="email" required placeholder="you@company.com">
+            </div>
 
-    <div class="full">
-      <label>What do you need?</label>
-      <select name="service" required>
-        <option value="Consultation">Consultation (project discovery)</option>
-        <option value="Website (custom)">Website (custom)</option>
-        <option value="Fast Website Package">Budget website (€150)</option>
-        <option value="Content">Content / video</option>
-        <option value="Integrations & analytics">Integrations / analytics</option>
-        <option value="Other">Other</option>
-      </select>
-    </div>
+            <div class="full">
+              <label>What do you need?</label>
+              <select name="service" required>
+                <option value="Consultation">Consultation (project discovery)</option>
+                <option value="Website (custom)">Website (custom)</option>
+                <option value="Fast Website Package">Budget website (€150)</option>
+                <option value="Content">Content / video</option>
+                <option value="Integrations & analytics">Integrations / analytics</option>
+                <option value="Other">Other</option>
+              </select>
+            </div>
 
-    <div class="full">
-      <label>Message</label>
-      <textarea name="message" placeholder="Briefly: niche, goal, what you sell/offer, deadline, references (if any)"></textarea>
-    </div>
-  </div>
+            <div class="full">
+              <label>Message</label>
+              <textarea name="message" placeholder="Briefly: niche, goal, what you sell/offer, deadline, references (if any)"></textarea>
+            </div>
+          </div>
 
-  <div class="formActions">
-    <button class="btn btnBlack" type="submit">Send request</button>
-    <div class="fine">We typically reply within 24 hours. If it’s urgent — add your deadline.</div>
-  </div>
-</form>
+          <div class="formActions">
+            <button class="btn btnBlack" type="submit">Send request</button>
+            <div class="fine">We typically reply within 24 hours. If it’s urgent — add your deadline.</div>
+          </div>
+        </form>
 
       </div>
     </section>
 
-    <!-- FOOTER (contacts) -->
     <footer class="siteFooter" aria-label="Contacts">
       <div class="footerCard reveal footerMini">
         <a class="footerMiniLink" href="mailto:web@erewhile.digital">web@erewhile.digital</a>
@@ -1672,7 +1616,6 @@
     (function(){
       const root = document.getElementById("erewhile-dstudio");
 
-      // smooth anchors inside embed
       root.querySelectorAll('a[href^="#"]').forEach(a=>{
         a.addEventListener("click", (e)=>{
           const id = a.getAttribute("href");
@@ -1683,7 +1626,6 @@
         });
       });
 
-      // reveal on scroll
       const io = new IntersectionObserver((entries)=>{
         entries.forEach(en=>{
           if(en.isIntersecting){
@@ -1695,14 +1637,12 @@
 
       root.querySelectorAll(".reveal").forEach(el=> io.observe(el));
 
-      // ===== VIDEO RAILS =====
       (function initVideoRails(){
         function initOneRail(trackId){
           const track = root.querySelector("#" + trackId);
           const rail = track ? track.closest(".video-rail") : null;
           if(!track || !rail) return;
 
-          // Wrap track into viewport (scroll container)
           let viewport = track.parentElement;
           if(!viewport || !viewport.classList.contains("rail-viewport")){
             viewport = document.createElement("div");
@@ -1711,11 +1651,9 @@
             viewport.appendChild(track);
           }
 
-          // clone children for seamless animation
           const originals = Array.from(track.children);
           originals.forEach(node => track.appendChild(node.cloneNode(true)));
 
-          // Infinite manual scroll wrap (on viewport)
           let half = 0;
           let lastX = 0;
 
@@ -1832,4 +1770,3 @@
 
 </body>
 </html>
-
