--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
             <a class="langLink" href="/ru/" hreflang="ru" lang="ru">RU</a>
           </div>
 
-          <a class="btn btnAccent" href="fast-website.html">Fast website €150</a>
+          <a class="btn btnAccent" href="en/fast-website.html">Fast website €150</a>
 
           <a class="btn btnBlack" href="#ew-contact">Get a quote</a>
         </div>
@@ -1544,7 +1544,7 @@
           </div>
 
           <div style="margin-top:16px;">
-            <a class="btn btnAccent" href="fast-website.html">Open package page</a>
+            <a class="btn btnAccent" href="en/fast-website.html">Open package page</a>
           </div>
         </div>
       </div>
@@ -1770,4 +1770,5 @@
 
 </body>
 </html>
+
 
