Update and rename majaslapa-150.html to lv/majaslapa-150.html

--- a/lv/majaslapa-150.html
+++ b/lv/majaslapa-150.html
@@ -8,8 +8,8 @@
   <title>Vienas lapas mājaslapa par 150 € (domēns līdz 15 € iekļauts) — Erewhile Digital</title>
   <meta name="description" content="Pasūti ātru landing lapu par 150 €. Mobilajām ierīcēm pielāgota, pieteikuma forma uz e-pastu, domēna iegāde iekļauta līdz 15 €. Ātrs starts Latvijā ar Erewhile Digital." />
 
-  <link rel="canonical" href="https://erewhile.digital/lv/vienas-lapas-majaslapa-150.html" />
-  <link rel="alternate" hreflang="lv" href="https://erewhile.digital/lv/vienas-lapas-majaslapa-150.html" />
+  <link rel="canonical" href="https://erewhile.digital/lv/majaslapa-150.html" />
+  <link rel="alternate" hreflang="lv" href="https://erewhile.digital/lv/majaslapa-150.html" />
   <link rel="alternate" hreflang="en" href="https://erewhile.digital/en/fast-website.html" />
   <link rel="alternate" hreflang="x-default" href="https://erewhile.digital/en/fast-website.html" />
 
@@ -17,7 +17,7 @@
   <meta property="og:title" content="Landing page mājaslapa par 150 € — Erewhile Digital" />
   <meta property="og:description" content="Landing lapa ātram startam: mobilajām ierīcēm pielāgota, pieteikuma forma uz e-pastu, domēna iegāde iekļauta līdz 15 €." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://erewhile.digital/lv/vienas-lapas-majaslapa-150.html" />
+  <meta property="og:url" content="https://erewhile.digital/lv/majaslapa-150.html" />
   <meta property="og:image" content="https://res.cloudinary.com/da4ctmwz5/image/upload/v1770636275/og_d0d1z2.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -531,7 +531,7 @@
       "@type": "Offer",
       "priceCurrency": "EUR",
       "price": "150",
-      "url": "https://erewhile.digital/lv/vienas-lapas-majaslapa-150.html",
+      "url": "https://erewhile.digital/lv/majaslapa-150.html",
       "description": "Ātra landing lapa: mobilajām ierīcēm pielāgota, pieteikuma forma uz e-pastu. Domēna iegāde iekļauta līdz 15 €."
     }
   }
@@ -563,7 +563,7 @@
 
   <div class="langSwitch" aria-label="Language switch">
     <a class="langLink" href="/en/fast-website.html" hreflang="en" lang="en">EN</a>
-    <a class="langLink isActive" href="/lv/vienas-lapas-majaslapa-150.html" hreflang="lv" lang="lv">LV</a>
+    <a class="langLink isActive" href="/lv/majaslapa-150.html" hreflang="lv" lang="lv">LV</a>
   </div>
 
   <a class="btn btnBlack" href="#order">Pasūtīt par 150 €</a>
